--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,7 @@ nav {
 .menu {
     margin-top: 65px;
     margin-left: 65px;
+   
 }
 
 .toggle-button {
@@ -30,6 +31,7 @@ nav {
     justify-content: space-between;
     width: 30px;
     height: 22px;
+    z-index: 9999;
 }
 
 .toggle-button:hover {
@@ -41,7 +43,21 @@ nav {
     width: 100%;
     background-color: #fff;
     border-radius: 12px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3 ease-in-out;
 }
+
+.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  
+.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  
+.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
 
 .page-list {
     display: none;
@@ -52,7 +68,7 @@ nav {
     height: 100vh;
     background-color: #ED1B24;
     color: #fff;
-    z-index: 9999;
+    z-index: 999;
     padding: 20px;
     overflow-y: hidden;
 }
@@ -339,9 +355,7 @@ p {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-
-    width: 100%;
-    height: 100vh;
+    padding: 125px 330px;
 }
 
 .usluga {
